fix: ssh-deploy version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -322,6 +322,7 @@
       </div>
     </div>
   </div>
+  <h3 style="text-align: center;">CICD implementation using GitHub actions is added</h3>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
