--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,6 +65,7 @@
     width: 100%;
     min-height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 1rem;
