--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,6 +65,7 @@
     width: 100%;
     min-height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 1rem;
@@ -322,6 +323,7 @@
       </div>
     </div>
   </div>
+  <h3 style="text-align: center;">CICD implementation using GitHub actions is added</h3>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
